# ohtelabra-asteroids

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: asteroid.py  bullet.py  cartesian.py  collisions.py  config.py  constants.py  db.py  draw.py  events.py  fonts.py  game.py  gameloop.py  keyboard.py  leaderboard.py  loop.py  main.py  pysteroids.py  rendering.py  score.py  ship.py  space_object.py  state.py  world.py
src/core/: __init__.py  asteroid.py  bullet.py  game.py  ship.py  space_object.py
src/graphics/: __init__.py  colors.py  text.py
src/state/: __init__.py  base.py  game_over.py  menu.py  playing.py  submit_score.py
src/view/: __init__.py  base.py  game_over.py  menu.py  playing.py  state.py  submit_score.py
tests/: _stubs.py  asteroid_test.py  bullet_test.py  cartesian_test.py  config_test.py  game_test.py  leaderboard_test.py  loop_test.py  ship_test.py  space_object_test.py  state_test.py  world_test.py
