[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["ladtopi <180638679+ladtopi@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
